@@ -13,6 +13,13 @@
   * Fix handling of relative paths in dulwich.client.get_transport_and_path.
     (eode)
 
+ IMPROVEMENTS:
+
+  * Add optional honor_filemode flag to build_index_from_tree.
+    (Mark Mikofski)
+
+  * Support core/filemode setting when building trees. (Jelmer Vernooij)
+
  FEATURES
 
   * Add support for mergetags. (milki, #963525)
